feat: add header component with styles

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -13,3 +13,9 @@ $dark-purple-color: rgba(85, 26, 139, 1);
 $brutalist-font-family: 'Brutalist';
 
 /* end fonts */
+
+/* hover start */
+
+$header-transition: 0.1s linear;
+
+/* hover end */
