--- a/src/assets/styles/_header.scss
+++ b/src/assets/styles/_header.scss
@@ -12,9 +12,11 @@
 
   &__logo {
     display: block;
+    position: relative;
     width: 3rem;
     height: 3rem;
     transition: $header-transition;
+    z-index: 10;
   }
 }
 
@@ -96,11 +98,27 @@
   }
 
   .navigation {
-    display: none;
+    position: fixed;
+    min-width: 100%;
+    height: 100%;
+    top: 0;
+    right: 0;
+    padding: 6rem 1rem;
+    background: $dark-purple-color;
+    z-index: 9;
+    transform: translateX(100%);
+    transition: 0.3s all linear;
+
+    &__list {
+      flex-direction: column;
+      gap: 3rem;
+    }
   }
 
   .burger-menu {
+    position: relative;
     display: flex;
+    z-index: 12;
   }
 }
 
