--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,4 +1,4 @@
-@import './variables', './fonts', './header';
+@import './variables', './fonts', './header', './main', './footer';
 
 * {
   box-sizing: border-box;
@@ -7,6 +7,8 @@
 }
 
 body {
+  display: flex;
+  flex-direction: column;
   height: 100vh;
   font-family: $brutalist-font-family;
   background-color: $ashamed-color;
