--- a/src/assets/styles/_footer.scss
+++ b/src/assets/styles/_footer.scss
@@ -5,4 +5,35 @@
   height: 4rem;
   background: $dark-purple-color;
   flex: 0 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  &__link {
+    display: block;
+  }
+
+  .link__github {
+    display: block;
+    width: 3rem;
+    height: 3rem;
+    fill: $white-color;
+
+    &:hover {
+      fill: $ashamed-color;
+      transition: $header-transition;
+    }
+  }
+
+  .version {
+    position: absolute;
+    right: 0.5rem;
+    bottom: 0;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 440px) {
+  .version {
+    font-size: 0.8rem;
+  }
 }
