--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -19,3 +19,9 @@ $brutalist-font-family: 'Brutalist';
 $header-transition: 0.1s linear;
 
 /* hover end */
+
+/* shadow start */
+
+$main-box-shadow: 0 0 0.2rem $russian-violet-color;
+
+/* shadow end */
