feat: add basic functionality

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,4 +1,5 @@
-@import './variables', './fonts', './header', './main', './footer';
+@import './variables', './fonts', './header', './main', './footer',
+  './calculator';
 
 * {
   box-sizing: border-box;
