--- a/src/assets/styles/_footer.scss
+++ b/src/assets/styles/_footer.scss
@@ -3,6 +3,7 @@
 .footer {
   width: 100%;
   height: 4rem;
+  position: relative;
   background: $dark-purple-color;
   flex: 0 0 auto;
   display: flex;
