--- a/src/assets/styles/_header.scss
+++ b/src/assets/styles/_header.scss
@@ -3,7 +3,7 @@
 .header {
   width: 100%;
   height: 4rem;
-  padding: 0 1rem;
+  padding: 0.5rem 1rem;
   font-size: 1.5rem;
   display: flex;
   align-items: center;
