--- a/src/assets/styles/_calculator.scss
+++ b/src/assets/styles/_calculator.scss
@@ -18,11 +18,15 @@
     box-shadow: $main-box-shadow;
   }
 
+  .answer {
+    width: 4rem;
+  }
+
   &__window {
     display: flex;
     padding: 0.7rem 0.7rem;
     font-size: 1.5rem;
-    gap: 1.3rem;
+    gap: 1rem;
     justify-content: center;
   }
 
