feat: add keyboard events

--- a/src/assets/styles/_math-operations.scss
+++ b/src/assets/styles/_math-operations.scss
@@ -80,6 +80,7 @@
   transform: translateY(100%);
   transition: 0.2s linear;
   border-radius: 0;
+  background: rgba(85, 26, 139, 0.9);
   z-index: 1;
 }
 
